--- a/styles/app.css
+++ b/styles/app.css
@@ -41,7 +41,7 @@ span{
 }
 
 .insideTemp {
-  font-size: 15vh;
+  font-size: 10vh;
   font-weight: 300;
 }
 
@@ -57,7 +57,7 @@ span{
 
 .power{
   opacity: 0.4;
-  line-height: 1;
+  line-height: 1.4em;
   -webkit-transition: all 2s ease;
   -moz-transition: all 2s ease;
   -ms-transition: all 2s ease;
